--- a/css/style.css
+++ b/css/style.css
@@ -621,12 +621,13 @@ a
     position: relative;
 
     color: #323232;
+    display: inline-block;
 }
 
 .nav-login-link::before
 {
     position: absolute;
-    bottom: -1px;
+    bottom: 4px;
 
     width: 100%;
     height: 1px;
@@ -634,6 +635,7 @@ a
     content: '';
 
     background: rgba(0, 0, 0, .3);
+
 }
 
 .nav-login-link:hover,
@@ -1215,20 +1217,21 @@ a
 
     border-radius: 10px;
     background-color: #fefefe;
+    color: #323232;
+    font-size: 14px;
+    line-height: 20px;
 }
 
 .address__info
 {
-    font-size: 14px;
-    line-height: 20px;
-
     margin: 0;
-    margin-bottom: 18px;
-    padding: 0;
-
-    color: #323232;
+    margin-right: 95px;
+    padding: 0;   
 }
 
+.address__info-phone {
+    margin-bottom: 23px;
+}
 .address__bold
 {
     font-size: 18px;
@@ -1237,6 +1240,7 @@ a
 
     margin: 0;
     padding: 0;
+    margin-bottom: 18px;
 }
 
 .address__bold--phone
@@ -1248,7 +1252,7 @@ a
 {
     display: block;
 
-    margin-top: 23px;
+    
     padding: 9px 27px 11px;
 
     border-radius: 25px;
